<resources>
    <string name="app_name">Mark My Word</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="card_view_word_image_desc">Word image</string>
    <string name="nav_label_open_book">Open book</string>
    <string name="nav_label_load_new_book">Load new book</string>
    <string name="nav_label_statistics">Statistics</string>
    <string name="nav_label_settings">Settings</string>
    <string name="nav_label_communicate">Communicate</string>
    <string name="nav_label_share">Share</string>
    <string name="nav_label_send">Send</string>
    <string name="open_books_book_icon">book icon</string>
</resources>
