<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_open_book"
            android:icon="@drawable/ic_open_book_black_24dp"
            android:title="@string/nav_label_open_book" />
        <item
            android:id="@+id/nav_parse_book"
            android:icon="@drawable/ic_add_book_black_24dp"
            android:title="@string/nav_label_load_new_book" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_stat_black_24dp"
            android:title="@string/nav_label_statistics" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_label_settings" />
    </group>

    <item android:title="@string/nav_label_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_label_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_label_send" />
        </menu>
    </item>

</menu>
